--- a/src/counter/style/style.scss
+++ b/src/counter/style/style.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
     text-align: center;
-    margin-top: 100px;
+    padding-top: 100px;
 
     button {
         margin: 0 20px;
