--- a/src/home/style/style.scss
+++ b/src/home/style/style.scss
@@ -1,10 +1,5 @@
-.counter-view {
+.home-view {
     width: 100vw;
     height: 100vh;
-    text-align: center;
-    margin-top: 100px;
-
-    button {
-        margin: 0 20px;
-    }
+    padding-top: 30px;
 }
