--- a/src/tiktok/style/style.scss
+++ b/src/tiktok/style/style.scss
@@ -2,9 +2,14 @@
     width: 100vw;
     height: 100vh;
     text-align: center;
-    margin-top: 100px;
+    padding-top: 100px;
 
     button {
         margin: 0 20px;
     }
+}
+
+.dark {
+    background-color: #000;
+    color: #fff;
 }
