--- a/src/home/style/style.scss
+++ b/src/home/style/style.scss
@@ -1,5 +1,13 @@
 .home-view {
-    width: 100vw;
-    height: 100vh;
-    padding-top: 30px;
+    width: 100%;
+    height: 100%;
+}
+.home-view__content {
+    font-size: 16px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    margin: 16px;
+    padding: 20px;
+    min-height: 75vh;
 }
