--- a/src/todolist/style/style.scss
+++ b/src/todolist/style/style.scss
@@ -1,6 +1,6 @@
 .todolist-view {
-    height: 100vh; 
     max-width: 1010px;
+    width: 100%;
     margin: auto;
 }
 .todolist-header {
@@ -19,17 +19,20 @@
 .todolist-content {
 
 }
-.form-ant-input {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 
-    .form-item-wrap-input {
+.form-ant-input {
+    width: 100%;
+    display: flex;
+    padding-top: 52px;
+
+    .form-item-wrap {
         flex: 1;
     }
-    .form-item-wrap-btn {
-        width: 110px;
-        margin-left: 30px;
+    label[for="job"]{
+        width: 100px;
     }
-    
+    label[for="note"] {
+        margin-left: 10px;
+        width: 90px;
+    }
 }
